--- a/pom.xml
+++ b/pom.xml
@@ -20,42 +20,41 @@
             <artifactId>microhttp</artifactId>
             <version>0.10</version>
         </dependency>
+
         <dependency>
             <groupId>dev.mccue</groupId>
             <artifactId>json</artifactId>
             <version>0.2.4</version>
         </dependency>
+
         <dependency>
             <groupId>dev.mccue</groupId>
             <artifactId>reasonphrase</artifactId>
-            <version>0.0.2</version>
+            <version>1.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>dev.mccue</groupId>
             <artifactId>microhttp-systemlogger</artifactId>
-            <version>0.0.1</version>
+            <version>1.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.43.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.jspecify</groupId>
             <artifactId>jspecify</artifactId>
             <version>0.3.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>4.4.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.soabase.record-builder</groupId>
-            <artifactId>record-builder-processor</artifactId>
-            <version>34</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -82,6 +81,12 @@
             <artifactId>dotenv-java</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.slugify</groupId>
+            <artifactId>slugify</artifactId>
+            <version>3.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -103,13 +108,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>io.soabase.record-builder</groupId>
-                            <artifactId>record-builder-processor</artifactId>
-                            <version>34</version>
-                        </path>
-                    </annotationProcessorPaths>
                     <compilerArgs>
                         --enable-preview
                     </compilerArgs>
