--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <version>1.0.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>dev.mccue</groupId>
+            <artifactId>microhttp-handler</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
